--- a/rode/public/index.html
+++ b/rode/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000">
     <title>Rode</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <noscript>
